--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
 		"html-webpack-plugin": "2.22.0",
 		"json-loader": "0.5.4",
 		"material-ui": "0.16.0",
+		"node-sass": "3.10.1",
 		"react-dom": "15.3.2",
 		"react-tap-event-plugin": "1.0.0",
+		"sass-loader": "4.0.2",
 		"style-loader": "0.13.1",
 		"url-loader": "0.5.7",
 		"webpack": "1.13.2",
