--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "json-loader": "0.5.4",
     "node-sass": "3.10.1",
     "path": "0.12.7",
+    "postcss-loader": "^0.13.0",
     "sass-loader": "4.0.2",
-    "style-loader": "0.13.1",
+    "style-loader": "^0.13.1",
     "svg-sprite-loader": "0.0.31",
     "svgo-loader": "1.1.2",
     "url-loader": "0.5.7",
