--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Webpack Babel setup for kickstarting reactjs project in no time",
   "main": "server.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p --config ./webpack.config.prod.js",
+    "build": "NODE_ENV=production webpack --config ./webpack.config.prod.js",
     "start": "node server.js",
     "dev": "webpack-dev-server --progress --colors --config ./webpack.config.dev.js"
   },
@@ -28,27 +28,37 @@
     "url": "https://github.com/shek8034/react-webpack-setup/issues"
   },
   "devDependencies": {
-    "babel-core": "6.17.0",
-    "babel-loader": "6.2.5",
-    "babel-preset-es2015": "6.16.0",
-    "babel-preset-react": "6.16.0",
-    "chunk-manifest-webpack-plugin": "0.1.0",
-    "css-loader": "0.25.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.22.0",
-    "json-loader": "0.5.4",
-    "node-sass": "3.10.1",
-    "path": "0.12.7",
-    "postcss-loader": "^0.13.0",
-    "sass-loader": "4.0.2",
-    "style-loader": "^0.13.1",
-    "svg-sprite-loader": "0.0.31",
-    "svgo-loader": "1.1.2",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.2",
-    "webpack-dev-server": "1.16.1",
-    "webpack-manifest-plugin": "1.0.1"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
+    "postcss-color-function": "^4.0.1",
+    "postcss-discard-comments": "^4.0.1",
+    "postcss-icss-values": "^2.0.1",
+    "postcss-import": "^12.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nesting": "^7.0.0",
+    "postcss-reporter": "^6.0.0",
+    "precss": "^3.1.2",
+    "chunk-manifest-webpack-plugin": "^1.1.2",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "json-loader": "^0.5.7",
+    "mini-css-extract-plugin": "^0.4.3",
+    "node-sass": "^4.9.3",
+    "path": "^0.12.7",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.0",
+    "svg-sprite-loader": "^4.1.2",
+    "svgo-loader": "^2.2.0",
+    "url-loader": "^1.1.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
     "koa": "1.2.4",
