--- a/package.json
+++ b/package.json
@@ -33,14 +33,6 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.1.5",
     "babel-loader": "^8.0.4",
-    "postcss-color-function": "^4.0.1",
-    "postcss-discard-comments": "^4.0.1",
-    "postcss-icss-values": "^2.0.1",
-    "postcss-import": "^12.0.0",
-    "postcss-mixins": "^6.2.0",
-    "postcss-nesting": "^7.0.0",
-    "postcss-reporter": "^6.0.0",
-    "precss": "^3.1.2",
     "chunk-manifest-webpack-plugin": "^1.1.2",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
@@ -49,10 +41,19 @@
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
     "path": "^0.12.7",
+    "postcss-color-function": "^4.0.1",
+    "postcss-discard-comments": "^4.0.1",
+    "postcss-icss-values": "^2.0.1",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nesting": "^7.0.0",
+    "postcss-reporter": "^6.0.0",
+    "precss": "^3.1.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "svg-sprite-loader": "^4.1.2",
+    "svgo": "^1.1.1",
     "svgo-loader": "^2.2.0",
     "url-loader": "^1.1.1",
     "webpack": "^4.20.2",
